--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -97,10 +97,9 @@
 .card-notes { margin-top: 4px; }
 .notes {
   background: #fff;
-  border-radius: 8px;
   padding: 8px;
-  box-shadow: 0 1px 3px rgb(0 0 0 / 12%);
   font-size: 12px;
+  max-width: 222px;
 }
 
 .lane-dot {
